--- a/burger-app/src/components/Burger/Burger.css
+++ b/burger-app/src/components/Burger/Burger.css
@@ -1,8 +1,8 @@
 .Burger {
-  width: 100%;
-  height: 250px;
+  width: 350px;
+  height: 300px;
   text-align: center;
-  margin: auto;
+  margin: 86px auto 0px;
   overflow-y: auto;
   font-weight: bold;
   font-size: 1.2rem;
