--- a/burger-app/src/components/Burger/Burger.css
+++ b/burger-app/src/components/Burger/Burger.css
@@ -1,30 +1,48 @@
 .Burger {
-  width: 350px;
-  height: 300px;
   text-align: center;
-  margin: 86px auto 0px;
-  overflow-y: auto;
   font-weight: bold;
   font-size: 1.2rem;
+  width: 55%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 25% auto;
 }
 
-@media (min-width: 500px) and (min-height: 400px) {
+@media (max-width: 850px) {
   .Burger {
-    width: 350px;
-    height: 300px;
+    width: 65%;
   }
 }
 
-@media (min-width: 500px) and (min-height: 401px) {
+@media (max-width: 710px) {
   .Burger {
-    width: 450px;
-    height: 400px;
+    width: 75%;
   }
 }
 
-@media (min-width: 1000px) and (min-height: 700px) {
+@media (max-width: 550px) {
   .Burger {
-    width: 700px;
-    height: 600px;
+    width: 90%;
+  }
+}
+
+
+@media (max-width: 500px) {
+  .Burger {
+    width: 75%;
+  }
+}
+
+@media (max-width: 380px) {
+  .Burger {
+    width: 85%;
+  }
+}
+
+@media (max-width: 300px) {
+  .Burger {
+    width: 98%;
   }
 }
