--- a/burger-app/src/components/Burger/BurgerControls/BurgerControl/BurgerControl.css
+++ b/burger-app/src/components/Burger/BurgerControls/BurgerControl/BurgerControl.css
@@ -1,28 +1,37 @@
 .flexCon {
   display: flex;
   flex-flow: row;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   padding: 5px;
 }
 
-.flexCon div {
+/* .flexCon div {
   display: flex;
   justify-content: flex-start;
   width: 10%;
   margin-right: 20px;
-}
+} */
 
-.flexCon .item {
-  width: auto;
-}
-
-.itemFlex {
+.item {
   display: flex;
   justify-content: space-between;
+  padding: 5px;
+
+}
+.globlItem {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 50%;
+}
+.itemFlex {
+  display: flex;
+  width: 100%;
 }
 
-.priceColor{ 
+.priceColor {
   margin-left: 2px;
 }
 
@@ -42,19 +51,46 @@
 
 .btnMore {
   padding: 5px 10px;
-    outline: none;
-    border: none;
-    border-radius: 2px;
-    color: #fff;
-    background-color: #ff9f43;
-    cursor: pointer;
+  outline: none;
+  border: none;
+  border-radius: 2px;
+  color: #fff;
+  background-color: #ff9f43;
+  cursor: pointer;
 }
 
-.btnLess:hover:not([disabled]){
+.btnLess:hover:not([disabled]) {
   cursor: pointer;
   background-color: #01a3a4;
 }
 
 .btnMore:hover {
   background-color: #dd8839;
+}
+
+@media (max-width: 600) {
+  .flexCon {
+    padding: 0;
+    box-sizing: border-box;
+    width: 100%;
+    justify-content: space-around;
+  }
+}
+
+@media (max-width: 570px) {
+  .globlItem {
+    width: 50%;
+  }
+}
+
+@media (max-width: 500px) {
+  .globlItem {
+    width: 30%;
+  }
+}
+
+@media (max-width: 300px) {
+  .flexCon {
+    flex-flow: column;
+  }
 }
