--- a/burger-app/src/components/Burger/BurgerIngredient/BurgerIngredient.css
+++ b/burger-app/src/components/Burger/BurgerIngredient/BurgerIngredient.css
@@ -1,47 +1,44 @@
 .BreadTop {
-  height: 20%;
-  width: 80%;
+  width: 90%;
+  height: 92px;
   background: linear-gradient(#d46322, #f08c49);
   border-radius: 50% 50% 0 0;
-  margin: auto;
   position: relative;
 }
 
 .breadBottom {
-  width: 80%;
-  background: linear-gradient(#e27b36 ,#d46322);
-  height: 20%;
+  width: 90%;
+  height: 92px;
+  background: linear-gradient(#e27b36, #d46322);
   display: block;
-  margin: auto;
   border-radius: 0 0 30px 30px;
 }
 
 .cheese {
-  width: 80%;
-  height: 5%;
-  margin: auto;
+  width: 98%;
+  height: 13px;
   background-color: #f1c40f;
   border-radius: 15px;
 }
 
 .Meat {
-  width: 80%;
-  height: 5%;
-  margin: auto;
+  width: 98%;
+  height: 18px;
   border-radius: 15px;
   background-color: #9e3328;
 }
 
 .Salad {
-  width: 87%;
-  height: 3%;
+  width: 100%;
+  height: 10px;
   background-color: #2ecc71;
-  margin: auto;
   border-radius: 50px;
+  border: 3px dashed #27ae60;
 }
 
 .Tomato {
-  height: 4%;
+  width: 98%;
+  /* height: 4%; */
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -49,9 +46,10 @@
 }
 
 .tomatoIn {
-  background-color: #e74c3c;
-  width: 42%;
+  background-color: #ff6347;
+  width: 50%;
   display: block;
-  height: 100%;
+  height: 15px;
   border-radius: 50px;
+  border: 2px dotted #e74c3c;
 }
