--- a/burger-app/src/components/Layout/Layout.css
+++ b/burger-app/src/components/Layout/Layout.css
@@ -1,3 +1,19 @@
 .Content {
-  margin-top: 16px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  box-sizing: border-box;
+  height: 100vh;
+}
+
+
+@media (max-width: 500px) {
+  .Content {
+    flex-direction: column;
+    height: 100%;
+  }
 }
